# mRNA-Fold

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_quartet_preprocessing.py
data/raw/: mrna_sequence_dataset.csv
references/: ibm_moderna_paper.md
scripts/: benchmark_quantum_vs_classical.py  demo_qubo_pipeline.py  inspect_dataset.py  run_pipeline_on_dataset.py
src/mrnafold/: __init__.py  data_loader.py  metrics.py  pairing.py  quartets.py  qubo.py
src/mrnafold/quantum/: __init__.py  ansatz.py  base_solver.py  cvar_vqe.py
tests/: test_metrics.py  test_pairing.py  test_quantum.py  test_quartets.py  test_qubo.py
